--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               >Join Us</a
             > -->
             <video autoplay loop muted id="bgvid" poster="./images/Saaya-vid-poster.png">
-              <source src="./images/Saaya Hype Video_Final_2.mp4" type="video/mp4">
+              <source src="./images/Saaya_Hype_Video.mp4" type="video/mp4">
             </video>
           </div>
         </div>
